--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body > header {
   text-align: center;
   padding: 12px 14px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 /* perubahan warna saat link navbar */
@@ -60,4 +60,69 @@ body > header {
 /* posisi navbar */
 .topnav-right {
   float: right;
+}
+
+.slide {
+  width: auto; /* bisa set dalam 1366px */
+  height: 578px;
+  overflow: hidden;
+}
+
+.slides {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  animation: slide 20s infinite;
+  -webkit-animation: slide 20s infinite;
+}
+
+.slides img {
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-200%);
+    -webkit-transform: translateX(-200%);
+    -moz-transform: translateX(-200%);
+    -ms-transform: translateX(-200%);
+    -o-transform: translateX(-200%);
+  }
+}
+
+h1.title {
+  text-align: center;
+  margin-bottom: 10px;
+  font-style: bold;
+}
+
+p {
+  text-align: justify;
+  margin-left: 70px;
+  margin-right: 70px;
+  margin-bottom: 20px;
+  font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p.quotes {
+  text-align: right;
+  font-size: 15px;
+  font-style: italic;
+}
+
+.peta {
+  width: 70%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 15%;
 }
